style.css
:root {
    --accent-color:  rgb(18, 166, 4);
    --hover-accent-color:  rgb(94, 188, 85);
    --shadow: 0 0 20px rgb(0,0,0,0.15);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
    Segoe UI Symbol;
}

body {
    font-size: 20px;
    background-color: whitesmoke;
}

.container {
    margin: 5% 25% 0%;
    /* background-color: rgb(255, 154, 2); */
    text-align: center;
    padding: 2% 5%;
    border-radius: 6px;
    box-shadow: var(--shadow);
}

h1, .card-container, .results{
    margin: 1rem;
}

.card-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.card {
    width: 15rem;
    height: 15rem;
    border: 2px solid rgb(0, 0, 0);
    margin: .5rem 0;
    overflow: hidden;
    border-radius: 6px;
    background-color: var(--accent-color);
    border: none;
    box-shadow: var(--shadow);
}

.card:hover {
    background-color: var(--hover-accent-color);
}

img {
    object-fit: contain;
    display: block;
}


.controls-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.1rem;
}

.results {
    text-align: left;
    margin: 0;
}

.btn-container button {
    width: 8rem;
    height: 2rem;
    padding: 6px 12px;
    font-size: .8em;
    border-radius: 6px;
    border: none;
    background-color:var(--accent-color);
    color: white;
}

.btn-container button:hover {
    background-color:var(--hover-accent-color);

}

